src/main/java/com/example/Demo/errors/exception/UsernameNotFoundException.java
package com.example.Demo.errors.exception;

public class UsernameNotFoundException extends RuntimeException {
    public UsernameNotFoundException(String message) {
        super(message);
    }
}
